# toktok

./: Cargo.toml  README.md  toktok  toktok.pub
src/: crypto.rs  main.rs  memory.rs  message.rs  network.rs  workers.rs
src/crypto/: asymetric.rs  openssh.rs
src/memory/: shared_fifo.rs  sqlite.rs
src/message/: header.rs  signal.rs  tlv.rs
src/network/: host.rs  network.rs  service.rs  udp.rs
src/workers/: config.rs  dispatch.rs  emit.rs  handle.rs  heartbeat.rs  receive.rs  trace.rs
