[package]
name = "toktok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
signature = "1.5.0"
ssh-key = { version = "0.4.2", features = ["ed25519","alloc","encryption"] }
rand_core = { version = "0.6", features = ["getrandom"] }
clap = "3.2.16"
sqlite = "0.27.0"
metrohash = "1.0.6"